--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,15 @@ jobs:
       with:
         name: Test results
         path: artifacts
+  build_artifact:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: webbertakken/unity-builder@<version>
+      env:
+        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+      with:
+        unityVersion: 2019.4.2f1
+        targetPlatform: WebGL
+        versioning: Semantic
+        # buildMethod: EditorNamespace.BuilderClassName.StaticBulidMethod
+
