--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
   build_artifact:
     runs-on: ubuntu-latest
     steps:
-    - uses: webbertakken/unity-builder@<version>
+    - uses: webbertakken/unity-builder@1.2
       env:
         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
       with:
