--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,21 +17,21 @@ jobs:
         projectPath:
           - .
         unityVersion:
-          - 2019.2.11f1
-          - 2019.3.0f1
+          - 2019.4.2f1
+          - 2019.4.3f1
         targetPlatform:
-          - StandaloneOSX # Build a macOS standalone (Intel 64-bit).
-          - StandaloneWindows # Build a Windows standalone.
-          - StandaloneWindows64 # Build a Windows 64-bit standalone.
-          - StandaloneLinux64 # Build a Linux 64-bit standalone.
+          # - StandaloneOSX # Build a macOS standalone (Intel 64-bit).
+          # - StandaloneWindows # Build a Windows standalone.
+          # - StandaloneWindows64 # Build a Windows 64-bit standalone.
+          # - StandaloneLinux64 # Build a Linux 64-bit standalone.
           - iOS # Build an iOS player.
           - Android # Build an Android .apk standalone app.
           - WebGL # WebGL.
-          - WSAPlayer # Build an Windows Store Apps player.
-          - PS4 # Build a PS4 Standalone.
-          - XboxOne # Build a Xbox One Standalone.
-          - tvOS # Build to Apple's tvOS platform.
-          - Switch # Build a Nintendo Switch player.
+          # - WSAPlayer # Build an Windows Store Apps player.
+          # - PS4 # Build a PS4 Standalone.
+          # - XboxOne # Build a Xbox One Standalone.
+          # - tvOS # Build to Apple's tvOS platform.
+          # - Switch # Build a Nintendo Switch player.
     steps:
       - uses: actions/checkout@v2
         with:
