--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,9 @@ env:
   NODE_VERSION: '10.x'                # set this to the node version to use
 
 jobs:
-  build-and-deploy:
+  build_and_deploy:
     name: Build and Deploy
+    needs: [build_server]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
