--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -7,7 +7,8 @@ on:
     branches: [ master ]
 
 jobs:
-  create_node_folder:
+  build_server:
     runs-on: ubuntu-latest
+    needs: [build_unity]
     steps:
-      - run: bash scripts/build-webgl.sh
+      - run: bash scripts/setup-server.sh
