--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,3 +51,10 @@ jobs:
         with:
           name: Build
           path: build
+
+  build_server:
+    runs-on: ubuntu-latest
+    needs: [build_unity, build]
+    steps:
+      - run: bash scripts/setup-server.sh
+
