--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,22 +62,18 @@ jobs:
           name: Build
           path: build
 
-  build_server:
+  deploy_server:
     runs-on: ubuntu-latest
     needs: [build_unity, build]
+    name: Build Server and Deploy
     steps:
-      - run: bash scripts/setup-server.sh
-
-  deploy_server:
-    name: Build and Deploy
-    needs: [build_server]
-    runs-on: ubuntu-latest
-    if: ${{ github.ref == 'ref/head/master' }}
-    # if: contains(github.ref, "release")
-    steps:
-    - name: 'Deploy to Azure WebApp'
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+      - name: 'Create Node.js Server'
+        run: bash scripts/setup-server.sh
+        # if: contains(github.ref, "release")
+        if: ${{ github.ref == 'ref/head/master' }}
+      - name: 'Deploy to Azure WebApp'
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
