--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
 
   deploy_server:
     runs-on: ubuntu-latest
-    needs: [build_unity, build]
+    needs: [build_unity]
     name: Build Server and Deploy
     steps:
       - name: 'Create Node.js Server'
