--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,72 +1,18 @@
-# https://circleci.com/orbs/registry/orb/w3d/unity-build
 version: 2.1
-orbs:
-  unity-build: w3d/unity-build@0.0.7
-
-description: Job That Builds a Unity Project.
-parameters:
-  exec:
-    type: executor
-  android_build:
-    type: boolean
-    default: true
-  app_version:
-    description: App Version
-    type: string
-  app_name:
-    description: App Name
-    type: string
-  unity_build_method:
-    description: Unity Build Method to Execute
-    type: string
-  unity_bundleversioncode:
-    description: Unity bundleVersionCode
-    type: string
-executor: << parameters.exec >>
-steps:
-  - checkout
-  - run:
-      name: Install Git LFS
-      command: >
-        curl -s
-        https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh
-        | bash
-
-        apt-get update
-
-        apt-get install -y git-lfs openssh-client
-
-        git lfs install
-
-        mkdir -p ~/.ssh
-
-        ssh-keyscan -H github.com >> ~/.ssh/known_hosts
-
-        ssh git@github.com git-lfs-authenticate
-        "${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}" download
-  - run:
-      name: Git LFS Pull
-      command: git lfs pull
-  - unity-build:
-      unity_build_method: << parameters.unity_build_method >>
-      unity_appversion: << parameters.app_version >>
-      unity_bundleversioncode: << parameters.unity_bundleversioncode >>
-  - store-unity-build-log
-  - when:
-      condition: << parameters.android_build >>
-      steps:
-        - run: >-
-            mv Build/Android/build_android.apk Build/Android/<<
-            parameters.app_name >>_<< parameters.app_version >>.apk
-  - run:
-      name: Store Persistent Environment Variables
-      command: >-
-        echo "export W3D_APK_PATH=Build/Android/<< parameters.app_name >>_<<
-        parameters.app_version >>.apk" >> Build/persistent_env_vars
-  - store-artifacts
-  - persist_to_workspace:
-      root: Build
-      paths:
-        - iOS
-        - Android
-        - persistent_env_vars
+executors:
+  unity:
+    docker:
+      # https://hub.docker.com/r/gableroux/unity3d/tags
+      - image: gableroux/unity3d:2018.3.11f1
+jobs:
+  build-test:
+    executor: unity
+    steps:
+      - checkout
+      - run: openssl aes-256-cbc -d -in .circleci/Unity_v2018.x.ulf-cipher -k ${CIPHER_KEY} >> .circleci/Unity_v2018.x.ulf
+      - run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -silent-crashes -logFile -manualLicenseFile .circleci/Unity_v2018.x.ulf || exit 0
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build-test
