--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,8 +68,10 @@ jobs:
     name: Build Server and Deploy
     steps:
       - name: 'Show contents'
+        uses: ./
         run: ls -la
       - name: 'Create Node.js Server'
+        uses: ./
         run: bash ./scripts/setup-server.sh
         # if: contains(github.ref, "release")
       - name: 'Deploy to Azure WebApp'
