--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '10.x'                # set this to the node version to use
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+  WORKING_DIRECTORY: .
 
 jobs:
   build_unity:
@@ -68,10 +69,10 @@ jobs:
     name: Build Server and Deploy
     steps:
       - name: 'Show contents'
-        uses: ./
+        working-directory: ${{ env.WORKING_DIRECTORY }}
         run: ls -la
       - name: 'Create Node.js Server'
-        uses: ./
+        working-directory: ${{ env.WORKING_DIRECTORY }}
         run: bash ./scripts/setup-server.sh
         # if: contains(github.ref, "release")
       - name: 'Deploy to Azure WebApp'
