--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ on:
 # 2. Change these variables for your configuration:
 env:
   AZURE_WEBAPP_NAME: unity-ci    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_PACKAGE_PATH: './WebGLBuild'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '10.x'                # set this to the node version to use
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
   WORKING_DIRECTORY: .
@@ -77,10 +77,6 @@ jobs:
       - name: 'Create Node.js Server'
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: bash ./scripts/setup-server.sh
-        with:
-          name: Build Server
-          path: WebGLBuild
-        # if: contains(github.ref, "release")
       - name: 'Deploy to Azure WebApp'
         uses: azure/webapps-deploy@v2
         with:
