--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,12 +69,21 @@ jobs:
     name: Build Server and Deploy
     steps:
       - name: 'Show contents'
+        uses: actions/checkout@v2
+        with:
+          repository: ${{ github.repository }}
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: ls -la
       - name: 'Prepare Setup Script'
+        uses: actions/checkout@v2
+        with:
+          repository: ${{ github.repository }}
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: chmod +x ./scripts/setup-server.sh
       - name: 'Create Node.js Server'
+        uses: actions/checkout@v2
+        with:
+          repository: ${{ github.repository }}
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: bash ./scripts/setup-server.sh
       - name: 'Deploy to Azure WebApp'
